# pySigma-backend-fortisiem

./: README.md  pyproject.toml  upgrade.sh
Browser_UI/: Readme  start.sh
Browser_UI/backend/: app.py  websocketServer.py
Browser_UI/html/: checkRule.html  compare.html  compareDetail.html  index.html
Browser_UI/js/: checkAction.js  compareAction.js  compareDetailAction.js  indexAction.js
sigma/backends/fortisiem/: __init__.py  fortisiem.py  xmlRuleFormater.py
sigma/pipelines/fortisiem/: __init__.py  config.py  detectionItemTransformation.py  fortisiem.py  postprocessing.py
tests/: expectRule.xml  expectRuleForFortiSIEMGUI.xml  expectRuleFromPipelineTest.xml  test.yml  test_backend_fortisiem.py  test_generate_xml_for_gui.py  test_pipelines_fortisiem.py
tools/: README  changes.csv  fortisiem_sigma_tool.py  getYmlStatusInSigmaRepo.sh  installPkg.sh  output.py  updateEventTypeFile.py  updateRule.py  util.py
tools/Browser_UI/: Readme  start.sh
tools/Browser_UI/backend/: app.py
tools/Browser_UI/html/: checkRule.html  compare.html  compareDetail.html  index.html  updateRule.html
tools/Browser_UI/js/: checkAction.js  compareAction.js  compareDetailAction.js  indexAction.js  updateRuleAction.js  util.js  websocket.js
tools/Browser_UI/scripts/: prepare_sigma_repo.sh
tools/config/: Logsource2ET.csv  RenameFileName.csv  winAttr2InternalAttr.csv
tools/config/Attr2InternalAttr/: attrType.json  fortigate.csv  fortigate.json  windows.csv  windows.json
tools/config/AttrVal2InternalVal/: windows-EventID.csv
tools/config/EvtTypeConditionAppend/: logsource.csv  (+1 more)
(+3 files in other folders)
