[tool.poetry]
name = "pySigma-backend-fortisiem"
version = "0.1.0"
description = "pySigma python backend"
authors = ["Mei Liu <meiliu@fortinet.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/meiliu@fortinet.com/pySigma-backend-fortisiem"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
