[tool.poetry]
name = "pySigma-backend-fortisiem"
version = "0.2.0"
description = "pySigma FortiSIEM backend"
authors = ["Mei Liu <meiliu@fortinet.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/FortiSIEM/pySigma-backend-fortisiem"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
